JumpScript/tests/baselines/reference/invokingNonGenericMethodWithTypeArguments2.errors.txt
tests/cases/compiler/invokingNonGenericMethodWithTypeArguments2.jump(5,9): error TS2347: Untyped function calls may not accept type arguments.


==== tests/cases/compiler/invokingNonGenericMethodWithTypeArguments2.jump (1 errors) ====
    class Foo {
        private foo: any;
    
        constructor() {
            this.foo<string>();
            ~~~~~~~~~~~~~~~~~~
!!! error TS2347: Untyped function calls may not accept type arguments.
        }
    }
    